--- a/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/IndexUser.cshtml
@@ -1,43 +1,11 @@
 ﻿@model IEnumerable<CSManagement.Models.Generation>
 
 @{
-    ViewBag.Title = "IndexUser";
+    ViewBag.Title = "หลักสูตรอบรม";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
     int i = 1;
 }
 
-<head>
-    <style>
-        .contentpage {
-            min-height: 250px;
-            padding: 10px;
-            margin-right: auto;
-            margin-left: auto;
-            padding-left: 30px;
-            padding-right: 30px;
-            background-color: white;
-        }
-
-        .outer {
-            padding: 1em 1em;
-            box-shadow: 5px 5px 5px #d9d9d9;
-        }
-
-        .header1 {
-            border-bottom: 2px solid #207016;
-        }
-
-        .page-title {
-            color: #fff;
-            padding: 6px 12px;
-            display: inline-block;
-            font-size: 20px;
-            margin-bottom: 0px;
-            padding-bottom: 15px;
-            background-color: #207016;
-        }
-    </style>
-</head>
 
 @if (ViewBag.Message != null)
 {
@@ -48,57 +16,55 @@
         };
     </script>
 }
-<body>
-    <section class="contentpage">
+<body class="pd-top-body">
+    <div class="content">
         <header class="header1">
-            <h1 class="page-title">หลักสูตรอบรม</h1>
+            <h1 class="page-title">หลักสูตรอบรมระยะสั้น</h1>
         </header>
         <br />
         @*<div class="col-md-12">
-            <div style="float:right">
-                <a class="btn btn-success" href="@Url.Action("Registers", "Generations")">กรอกข้อมูลส่วนตัว</a>
+                <div style="float:right">
+                    <a class="btn btn-success" href="@Url.Action("Registers", "Generations")">กรอกข้อมูลส่วนตัว</a>
+                </div>
             </div>
-        </div>
-        <br />
-        <br />*@
-        <div class="row">
-            <table id="example1" class="table table-bordered table-striped" style="width:100%">
-                <thead>
+            <br />
+            <br />*@
+        <table id="example1" class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th style="text-align:center">ที่</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
+                    <th style="text-align:center">จำนวน(คงเหลือ/รับทั้งหมด)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Date)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
+                    <th style="text-align:center">สมัครเรียน</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
                     <tr>
-                        <th style="text-align:center">ที่</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Short_Course.SC_NameTH)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Name)</th>
-                        <th style="text-align:center">จำนวน(คงเหลือ/รับทั้งหมด)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Date)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
-                        <th style="text-align:center">สมัครเรียน</th>
+                        <td style="text-align:center">@(i++)</td>
+                        <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH.Substring(0, Math.Min(30, @item.Short_Course.SC_NameTH.Length))...</td>
+                        <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
+                        <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">(@item.Gen_Member/@item.Gen_MemberMax)</td>
+                        <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Date</td>
+                        <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
+                        <td style="text-align:center;color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
+                        <td style="text-align:center">
+                            <button type="button" class="btn btn-success btn-sm  modal-link"
+                                    data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
+                                สมัครอบรม
+                            </button>
+                            @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
+                        </td>
                     </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td style="text-align:center">@(i++)</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Short_Course.SC_NameTH.Substring(0, Math.Min(30, @item.Short_Course.SC_NameTH.Length))...</td>
-                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Name</td>
-                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">(@item.Gen_Member/@item.Gen_MemberMax)</td>
-                            <td style="text-align:center" class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">@item.Gen_Date</td>
-                            <td class="modal-link" data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })" style="text-align:right;color:forestgreen"><strong>@Html.DisplayFor(modelItem => item.Gen_Fee)-.</strong></td>
-                            <td style="text-align:center;color:@(item.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => item.Gen_Status1.Gen_Name)</td>
-                            <td style="text-align:center">
-                                <button type="button" class="btn btn-success btn-sm  modal-link"
-                                        data-targeturl="@Url.Action("showdetails","Generations",new { id = item.Gen_NO })">
-                                    สมัคร
-                                </button>
-                                @*<button class="btn btn-info" type="button" data-toggle="modal" data-target="#myModal"><i class="fa fa-list-ul"></i> รายละเอียด</button>*@
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </section>
+                }
+            </tbody>
+        </table>
+    </div>
 </body>
 
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
