--- a/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
@@ -11,7 +11,7 @@
 
 <div class="modal-header" style="background-color:#F39C12">
     <button type="button" class="close" data-dismiss="modal">&times;</button>
-    <h4 class="modal-title" style="letter-spacing: 0px; font-size: 25px;color:white">รายละเอียดหลักสูตร</h4>
+    <p4 class="modal-title" style="letter-spacing: 0px; font-size: 25px;color:white">รายละเอียดหลักสูตร</p4>
 </div>
 <div class="modal-body">
     <table class="table table-bordered" style="width: 100%">
@@ -42,9 +42,9 @@
             </tr>
         </tbody>
     </table>
-    <h1>
+    <p4>
         รายะเอียด
-    </h1>
+    </p4>
     <h5>
         @Html.DisplayFor(modelItem => Model.Short_Course.SC_Details)
     </h5>
