--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -3,133 +3,111 @@
     ViewBag.Title = "วิทยาการคอมพิวเตอร์";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
-
 <style>
-    .carousel .item img {
-        margin: 0 auto;
-    }
-
-    .card-img-top {
-        box-shadow: 5px 5px 5px #d9d9d9;
-        max-width: 100%;
-        max-height: 100%;
-        margin-top: 10px;
-    }
-
-    .header1 {
-        border-bottom: 2px solid #207016;
-    }
-
-    .page-title {
-        color: #fff;
-        padding: 6px 12px;
-        display: inline-block;
-        font-size: 18px;
-        margin-bottom: 0px;
-        padding-bottom: 15px;
-        background-color: #207016;
-    }
-
-    .card {
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-        transition: 0.3s;
-        width: 100%;
-    }
-
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-
-    .container {
-        padding: 2px 16px;
+    * {
+        font-family: 'Kanit', sans-serif;
     }
 </style>
 
 <section class="banner full">
-    <div class="row">
-        <div class="col-lg-8 col-md-12 col-sm-12 ">
-            <div class="panel panel-default outer" style="width:95%;height:100%;padding:0px">
-                <div class="text-justify">
-                    <div id="myCarousel" class="carousel slide vertical" data-ride="carousel" style="overflow: hidden">
-                        <ol class="carousel-indicators">
-                            @for (int j = 0; j < ViewBag.Count; j++)
-                            {
-                                <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
-                            }
-                        </ol>
-                        <div class="carousel-inner">
-                            @{int i = 0;}
-                            @foreach (var item in Model)
-                            {
-                                i++;
-                                var active = i == 1 ? "active" : "";
-                                <div class="item @active">
-                                    <a style="cursor:pointer;" onclick="myFunction('@item.Pic_Link')">
-                                        <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%; height: 100%;max-height: 600px" />
-                                    </a>
-                                </div>
-                            }
-                        </div>
-                        <a class="left carousel-control" data-target="#myCarousel" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="right carousel-control" data-target="#myCarousel" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            @for (int j = 0; j < ViewBag.Count; j++)
+            {
+                <li data-target="#myCarousel" data-slide-to="@j" class="@(j == 0 ? "active" : string.Empty)"></li>
+            }
+        </ol>
+
+        <div class="carousel-inner" role="listbox">
+            @{int i = 0;}
+            @foreach (var item in Model)
+            {
+                i++;
+                var active = i == 1 ? "active" : "";
+                <div class="item @active">
+                    <a style="cursor: pointer;" onclick="myFunction('@item.Pic_Link')">
+                        <img src="~/imgSlideShow/@item.Pic_Img" style="width:100%; height: 100%;" />
+                    </a>
                 </div>
-            </div>
+            }
         </div>
 
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</section>
 
-        @*ประชาสัมพันธ์ข่าวสารของสาขา*@
-        <div class="col-lg-4 col-md-12 col-sm-12">
-            <div class="panel panel-default outer" style="width:95%">
-                <div class="panel-heading headerbar">
-                    ข่าวประชาสัมพันธ์
-                </div>
-                @{
-                    foreach (var item in ViewBag.NewsCount)
-                    {
-                        <img src="~/img/newicon.png" style="width:10%" />
-                        <strong>@item.New_Name.Substring(0, Math.Min(20, @item.New_Name.Length))</strong>
-                        <a href="@Url.Action("IndexUser","News")?id=@item.New_ID">[อ่านต่อ]...</a><br />
-                    }
-                }
+
+<div class="row">
+    <iframe class="bg-content-vdo" src="https://www.youtube.com/embed/udzjVQYfplM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    @*<div class="col-sm-12 col-md-6 bg-content" style="background-image: url('../../Content/img/bg-dark.jpg');">
+            <div class="content">
+                <strong>หลักสูตรวิทยาศาสตรบัณฑิต  สาขาวิทยาการคอมพิวเตอร์</strong><br />
+                <p>Bachelor of Science Program in Computer Science</p><br />
+                <p>
+                    มุ่งพัฒนาและผลิตบุคลากรด้านคอมพิวเตอร์ที่มีคุณธรรม จริยธรรม โดยสามารถนำความรู้ไปประยุกต์ใช้ในอาชีพ และพัฒนาเพื่อเพิ่มขีดความสามารถในการแข่งขันขององค์กร รัฐบาล เอกชน
+                    และประกอบอาชีพส่วนตัวทางด้านคอมพิวเตอร์และเทคโนโลยี
+                    เพื่อการพัฒนาวิทยาการคอมพิวเตอร์และสร้างสรรค์งานด้านเทคโนโลยีคอมพิวเตอร์ให้เหมาะสมกับท้องถิ่น ชุมชนและประเทศ และพัฒนาคนดีสู่สังคมเพื่อเป็นกำลังของชาติ
+                </p>
             </div>
+        </div>*@
+
+    <div class="col-sm-12 col-md-6 bg-content" style="background-image: url('../../Content/img/bg-yellow.jpg');">
+        <div class="content">
+            <strong>ปรัชญา</strong><br />
+            <p>“ใฝ่รู้ สู้งาน ชำนาญการพัฒนาซอฟต์แวร์”</p><br />
+            <strong>จุดเด่น</strong><br />
+            <p>
+                มีอาจารย์ที่คอยดูแลนักศึกษาอย่างใกล้ชิด นักศึกษาได้ลงมือฝึกปฏิบัติจริงเพื่อให้ก้าวทันเทคโนโลยีใหม่ๆ อยู่เสมอ
+                และสนับสนุนให้นักศึกษาได้แสดงศักยภาพของตนเองในการแข่งขันทักษะต่างๆ
+                จัดหลักสูตรการเรียนการสอนให้นักศึกษามีทักษะในการประกอบวิชาชีพ มีวัสดุอุปกรณ์ และห้องปฏิบัติการที่ทันสมัย
+            </p>
+        </div>
+    </div>
+</div>
+
+
+
+
+<div class="container-1">
+    @*image link*@
+    <div class="content">
+        <div class="row">
+            @{
+                var count = 0;
+                foreach (var item in ViewBag.Link)
+                {
+                    if (count == 4)
+                    {
+                        break;
+                    }
+                    count++;
+
+                    <div class="col-12 col-lg-3 col-md-3 col-sm-6" style="padding-top:15px;padding-bottom:15px">
+                        <div class="card" style="padding:0px">
+                            <a style="cursor: pointer;" onclick="myFunction('@item.Picture_Link')">
+                                <img src="~/img/@item.Picture_Img" class="card-img-top">
+                            </a>
+                        </div>
+                    </div>
+                }
+            }
         </div>
     </div>
 
-    <div class="container">
-        <div class="card-body">
-            <div class="row">
-                @{
-                    var count = 0;
-                    foreach (var item in ViewBag.Link)
-                    {
-                        if (count == 4)
-                        {
-                            break;
-                        }
-                        count++;
-                        <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                            <a style="cursor: pointer;" onclick="myFunction('@item.Picture_Link')"><img src="~/img/@item.Picture_Img" class="card-img-top"></a>
-                        </div>
-                    }
-                }
-            </div>
-        </div>
-        <br />
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="panel panel-default outer" style="width:95%">
-                        <div class="panel-heading headerbar">
-                            สัดส่วนหมวดวิชาหลักสูตรสาขา  <a onclick="gotopage1()" style="cursor: pointer;">เพิ่มเติม...</a>
-                        </div>
+    <div class="content">
+        <div class="row">
+            @*กราฟแสดงผล*@
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-header">สัดส่วนหมวดวิชาหลักสูตรสาขา<button type="button" class="btn btn-warning" onclick="gotopage1()" style="cursor: pointer;float:right">เพิ่มเติม...</button></div>
+                    <div class="panel-content">
                         <a onclick="gotopage1()" style="cursor: pointer;">
                             <div class="panel-body text-justify chart-responsive">
                                 <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
@@ -137,12 +115,12 @@
                         </a>
                     </div>
                 </div>
+            </div>
 
-                <div class="col-md-6">
-                    <div class="panel panel-default outer" style="width:95%">
-                        <div class="panel-heading headerbar">
-                            สัดส่วนการทำงานของศิษย์เก่า  <a onclick="gotopage2()" style="cursor: pointer;">เพิ่มเติม...</a>
-                        </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-header">สัดส่วนการทำงานของศิษย์เก่า<button type="button" class="btn btn-warning" onclick="gotopage2()" style="cursor: pointer;float:right">เพิ่มเติม...</button></div>
+                    <div class="panel-content">
                         <a onclick="gotopage2()" style="cursor: pointer;">
                             <div class="panel-body text-justify chart-responsive">
                                 <div class="chart" id="chartContainer2" style="height: 300px; position: relative;"></div>
@@ -152,9 +130,71 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    @*ประชาสัมพันธ์ข่าวสารของสาขา*@
+    @*เหลือแยกประเภทของข่าว เอาให้โชว์แค่4ข่าวพอนะ*@
+    <div class="random">
+        <div class="content">
+            <div class="w3-bar" style="color: #fff!important;">
+                <button class="w3-bar-item w3-button" onclick="openNews('news')">ข่าวล่าสุด</button>
+                <button class="w3-bar-item w3-button" onclick="openNews('Paris')">ข่าวประชาสัมพันธ์</button>
+                <button class="w3-bar-item w3-button" onclick="openNews('Paris')">วิชาการ</button>
+                <button class="w3-bar-item w3-button" onclick="openNews('Tokyo')">กิจกรรม</button>
+                <button class="w3-bar-item w3-button" onclick="openNews('all')">ทั้งหมด >></button>
+            </div>
+            <div class="border-bottom"></div>
+
+            <div id="news" class="w3-container w3-display-container city">
+                <div class="row">
+                    @{
+                        foreach (var item in ViewBag.NewsCount)
+                        {
+                            <div class="col-md-3">
+                                <div class="top-res-container mar-r">
+                                    <div class="top-res-pic">
+                                        <img src="~/Content/img/img-test-300-150.jpg" />
+                                    </div>
+
+                                    <div class="top-res-content">
+                                        <h1 class="top-res-head">@item.New_Name.Substring(0, Math.Min(20, @item.New_Name.Length))</h1>
+                                        <p class="top-res-detail">
+                                            @item.New_Details
+                                        </p>
+
+                                        <div class="see-more">
+                                            <button class="see-more-btn" href="@Url.Action("IndexUser","News")?id=@item.New_ID">อ่านต่อ</button>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @*/////////////////////////////////////////////////////*@
+
+    @*script ประชาสัมพันธ์ข่าวสารของสาขา แก้เสร็จแล้วเอาไปไว้ข้างล่างด้วยนะ*@
+    <script>
+        function openNews(newsName) {
+            var i;
+            var x = document.getElementsByClassName("city");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            document.getElementById(newsName).style.display = "block";
+        }
+    </script>
+
+    @*/////////////////////////////////////////////////////*@
 
 
-        @*ผลงานนักศึกษา*@
+    @*ผลงานนักศึกษา*@
+    <div class="content">
         <header class="header1">
             <a class="page-title" href="@Url.Action("IndexUser","Projects")">ผลงานนักศึกษา</a>
         </header>
@@ -170,13 +210,17 @@
                     counter++;
                     <div class="col-md-4">
                         <div class="box box-widget widget-user-2">
-                            <div class="widget-user-header bg-yellow" style="height: 100%; padding: 10px">
-                                <div class="widget-user-image">
-                                    <img class="img-circle" style="height: 80px " img src="~/img/@item.Stu_Img" />
+                            <div class="profile-widget bg-yellow">
+                                <div class="profile-img">
+                                    <img class="img-circle" style="height:80px;" img src="~/img/@item.Stu_Img" />
                                 </div>
-                                <h3 class="widget-user-username" style="letter-spacing: 0px">@item.Stu_Name @item.Stu_Surname</h3>
-                                <h4 class="widget-user-username" style="letter-spacing: 0px">@item.Pj_StuID</h4>
-                                <h5 class="widget-user-desc" style="font-size:80%">@item.Pj_NameTH</h5>
+                                <div style="        margin-left: 10px;
+        padding-left: 10px
+">
+                                    <p3-bold>@item.Stu_Name @item.Stu_Surname</p3-bold><br />
+                                    <p3-bold>@item.Pj_StuID</p3-bold><br />
+                                    <p5>เรื่อง : @item.Pj_NameTH</p5>
+                                </div>
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
@@ -219,16 +263,80 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        @*แนะนำว่าเรียนอะไรบ้าง*@
-        <div class="container">
-            @*<div class="panel panel-default outer" style="padding: 1em 5em;">*@
-            <header class="header1">
-                <h1 class="page-title">สาขาเราเรียนอะไรกัน</h1>
-            </header>
-            <br />
+    @*แนะนำว่าเรียนอะไรบ้าง*@
+    <div class="content">
+        @*<div class="panel panel-default outer" style="padding: 1em 5em;">*@
+        <header class="header1">
+            <p class="page-title">สาขาเราเรียนอะไรกัน</p>
+        </header>
+        <br />
+        <div class="row">
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/programmer.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin: 15px; height: 100px">
+                        <h4><b>พัฒนาการเขียนโปรแกรม</b></h4>
+                        <p>พัฒนาการเขียนโปรแกรมทั้งแบบ OOP และ Structure เช่น C#, Python</p>
+                    </div>
+                </div>
+            </div>
 
-            <div class="row">
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/app.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;height:100px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาแอพพลิเคชั่น</b></h4>
+                        <p>พัฒนาแอพพลิชั่นด้วย Cross platform เช่น Xamarin, Ionic, React</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/webApp.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;height:100px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาเว็บแอพพลิเคชั่น</b></h4>
+                        <p>พัฒนาเว็บแอพพลิเคชั่นที่ทำงานได้จริง เช่น Asp.Net MVC, PHP, Angular, React JS, Javascript</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/GameDev.jpg" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;height:100px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาการเขียนเกมส์</b></h4>
+                        <p>พัฒนาการเขียนเกมส์ด้วยโปรแกรม Unity 3D</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/graphic.png" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;height:100px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนากราฟิกดีไซน์</b></h4>
+                        <p>ออกแบบกราฟิกดีไซน์ เช่น การออกแบบป้ายต่างๆ</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="w3-card">
+                    <img src="~/Content/img/Network.jpg" alt="Avatar" style="width:100%">
+                    <div class="card-body" style="margin:15px;height:100px">
+                        <h4 style="letter-spacing: 0px;"><b>พัฒนาเครือข่าย</b></h4>
+                        <p>พัฒนาจัดการเครือข่ายอินเตอร์เน็ตโดยเครื่องใช้งานจริง</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        @*<div class="row">
                 @{
                     foreach (var item in ViewBag.Syll)
                     {
@@ -243,10 +351,9 @@
                         </div>
                     }
                 }
-            </div>
-        </div>
+            </div>*@
     </div>
-</section>
+</div>
 
 
 
