--- a/CSManagement/CSManagement/Views/Teachers/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/IndexUser.cshtml
@@ -1,74 +1,36 @@
 ﻿@model IEnumerable<CSManagement.Models.Teacher>
 
 @{
+    ViewBag.Title = "บุคคลากร-อาจารย์";
     Layout = "~/Views/Shared/_LayoutUser.cshtml";
     int i = 1;
 }
-<head>
-    <style>
-        .outer {
-            padding: 1em 1em;
-            box-shadow: 5px 5px 5px #d9d9d9;
-        }
 
-        .headerbar {
-            background: #feac28 !important;
-            color: #ffffff !important;
-            position: relative;
-            margin-bottom: 0.5em;
-            margin-right: -2.5em;
-            margin-left: -2.5em;
-            box-shadow: 5px 5px 5px #d9d9d9;
-        }
-
-            .headerbar:before {
-                content: "";
-                position: absolute;
-                border-bottom: 0.5em solid #333;
-                border-left: 1.5em solid transparent;
-                left: 5px;
-                top: -0.5em;
-            }
-
-            .headerbar:after {
-                content: "";
-                position: absolute;
-                border-top: 0.5em solid #333;
-                border-right: 1.5em solid transparent;
-                right: 5px;
-                bottom: -0.5em;
-            }
-
-            .headerbar:hover {
-                transform: scale(1,1.1);
-            }
-    </style>
-</head>
-
-<body>
-    <section class="content">
-        <div class="panel panel-default outer" style="width:100%">
-            <div class="panel-heading headerbar" style="text-align:center;font-size:20px">
-                อาจารย์ประจำหลักสูตรสาขาวิทยาการคอมพิวเตอร์
-            </div>
-            <div class="row">
-                @foreach (var item in Model)
-                {
-                    <div class="col-md-3 modal-link" data-targeturl="@Url.Action("showdetails","Teachers",new { id = item.Tea_ID })">
-                        <div class="panel panel-default outer" style="height:100%;margin-top:20px">
-                            <div class="panel-body text-center">
-                                <img src="~/img/@item.Tea_Img" style="width:70%;height:160px" /><br /><br />
-                                <label style="text-align:center">@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</label>
-                                <p style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_Position)</p>
-                            </div>
-                            <span style="padding: 45px">ดูข้อมูลเพิ่มเติม คลิก</span>
-                        </div>
-                    </div>
-                }
+<div class="content">
+    <header class="header1">
+        <div class="row">
+            <div class="col-md-6">
+                <h1 class="page-title">อาจารย์ประจำหลักสูตรสาขาวิทยาการคอมพิวเตอร์</h1>
             </div>
         </div>
-    </section>
-</body>
+    </header>
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-3 modal-link" data-targeturl="@Url.Action("showdetails","Teachers",new { id = item.Tea_ID })">
+                <div class="panel panel-default outer" style="height:100%;margin-top:20px">
+                    <div class="panel-body text-center">
+                        <img src="~/img/@item.Tea_Img" style="width:70%;height:160px" /><br /><br />
+                        <label style="text-align:center">@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</label>
+                        <p style="text-align:center">ตำแหน่ง : @Html.DisplayFor(modelItem => item.Tea_Position)</p>
+                        <button type="button" class="btn btn-warning">ดูเพิ่มเติม...</button>
+                    </div>
+                    
+                </div>
+            </div>
+        }
+    </div>
+</div>
 
 <link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
 @section Scripts{
