--- a/CSManagement/CSManagement/Views/Teachers/showdetails.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/showdetails.cshtml
@@ -11,7 +11,7 @@
 
 <div class="modal-header" style="background-color:#F39C12">
     <button type="button" class="close" data-dismiss="modal">&times;</button>
-    <h4 class="modal-title" style="letter-spacing: 0px; font-size: 25px;color:white">รายละเอียดอาจารย์</h4>
+    <p4 class="modal-title" style="letter-spacing: 0px; font-size: 25px;color:white">รายละเอียดเพิ่มเติม</p4>
 </div>
 <div class="modal-body">
     <table class="table table-bordered" style="width: 100%">
